--- a/code/backup/Alvatrum.lpi
+++ b/code/backup/Alvatrum.lpi
@@ -153,7 +153,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="6">
+    <Exceptions Count="7">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -172,6 +172,9 @@
       <Item6>
         <Name Value="EInOutError"/>
       </Item6>
+      <Item7>
+        <Name Value="RunError(2)"/>
+      </Item7>
     </Exceptions>
   </Debugging>
 </CONFIG>
